# Trading-Multi-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.lambda  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
docs/: PROJECT_STATE.md  operations.md
docs/memory-snapshot/: MEMORY.md  README.md  architecture_dynamodb_vs_aurora.md  project_local_infra_gotchas.md  project_policy_vs_schema.md  project_precommit_friction.md  project_serverless_pivot.md  project_step_1_5_blocker.md  user_collaboration_style.md
docs/research/: smc-evidence-review.md
infrastructure/: .gitignore  app.py  cdk.json  requirements.txt
infrastructure/stacks/: __init__.py  compute_stack.py  data_stack.py  monitoring_stack.py  network_stack.py  parameters.py  scheduling_stack.py
requested_scripts/smc-analyzer/scripts/: derivatives_data.py  detect_fvg.py  detect_liquidity.py  detect_ob.py  detect_structure.py  full_scan.py  smc_config.py
requested_scripts/smc-journal/scripts/: journal.py
requested_scripts/smc-market-data/scripts/: fetch_binance.py
scripts/: __init__.py  alarm_notifier.py  migrate.py  run_scan.py  seed_signals.py  send_test_telegram.py
src/agents/analyzer/: __init__.py  smc_analyzer.py
src/agents/analyzer/smc/: __init__.py  analysis.py  fvg.py  liquidity.py  models.py  order_block.py  structure.py  swings.py  volatility.py
src/agents/forecaster/: __init__.py  forecaster.py  models.py
src/agents/historian/: __init__.py  historian.py  models.py
src/agents/judge/: __init__.py  judge.py  models.py
src/agents/orchestration/: __init__.py  graph.py  reservations.py  risk_gates.py
src/agents/skeptic/: __init__.py  models.py  skeptic.py
src/common/: llm.py  tracing.py
src/common/models/: __init__.py  enums.py  scan_context.py  signal_proposal.py  skip_decision.py
src/config/: __init__.py  secrets.py  settings.py
src/notifications/: __init__.py  base.py  formatter.py  telegram.py
src/persistence/: __init__.py  dataapi_migrate.py  factory.py  models.py  repositories.py  schema.sql  store.py
src/providers/: __init__.py  base.py  binance.py  macro.py  rate_limit.py
tests/infra/: conftest.py  test_stacks.py
tests/integration/: test_binance_integration.py  test_historian_integration.py  test_macro_integration.py  test_migrate_integration.py  test_repositories_integration.py
tests/unit/: test_active_setups.py  test_alarm_notifier.py  test_asyncpg_store.py  test_binance_provider.py  test_data_api_store.py  test_dataapi_migrate.py  test_enums.py  test_factory.py  test_find_similar_asyncpg.py  test_find_similar_dataapi.py  test_forecaster.py  test_formatter.py  test_historian.py  test_judge.py  test_llm.py  test_macro_providers.py  test_migrate.py  test_orchestration_graph.py  test_pipeline_graph.py  test_provider_base.py  test_rate_limit.py  test_repositories.py  test_reservations.py  test_risk_gates.py  test_run_scan.py  test_scan_context.py  test_secrets.py  test_seed_signals.py  test_settings.py  test_signal_proposal.py  test_skeptic.py  test_skip_decision.py  test_smc_analyzer.py  test_smc_fvg.py  test_smc_liquidity.py  test_smc_order_block.py  test_smc_structure.py  test_telegram_notifier.py  test_tracing.py
