[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-signals-system"
version = "0.1.0"
description = "Multi-agent crypto trading signal analyzer (signal-only)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Kavindu Pramod", email = "pramodkavindu44@gmail.com" }]
keywords = ["crypto", "trading", "signals", "smc", "agents", "anthropic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]

dependencies = [
    "pydantic>=2.7,<3",
    "anthropic>=0.39",
    "langgraph>=1.0",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "ccxt>=4.4",
    "aiohttp>=3.10",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# --- ruff configuration (Step 1.2 expands this) ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "ASYNC",# flake8-async
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]

# --- mypy configuration ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
check_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["ccxt", "ccxt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true

# --- pytest configuration ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
# Default run excludes integration tests; opt in with `pytest -m integration`.
addopts = ["-m", "not integration"]
markers = [
    "integration: integration tests that hit real external services (skipped in CI by default)",
]
filterwarnings = [
    "error",
]
