[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-signals-system"
version = "0.1.0"
description = "Multi-agent crypto trading signal analyzer (signal-only)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Kavindu Pramod", email = "pramodkavindu44@gmail.com" }]
keywords = ["crypto", "trading", "signals", "smc", "agents", "anthropic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]

dependencies = [
    "pydantic>=2.7,<3",
    "anthropic>=0.39",
    "langgraph>=1.0",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "boto3>=1.35",
    "ccxt>=4.4",
    "aiohttp>=3.10",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
slice3-embeddings = [
    "pgvector>=0.3",  # Slice 3 Step 3.4: narrative embeddings in signals
]

# Step 2.7: optional Langfuse node tracing. Off by default and a no-op until
# LANGFUSE_* env vars are set (see src/common/tracing.py); install with
# `pip install -e ".[tracing]"` to enable. Keeps the core install lean.
tracing = [
    "langfuse>=2",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Ship non-Python data files that live inside the package. schema.sql is
# loaded at runtime via importlib-relative path (SCHEMA_SQL_PATH); without
# this it is omitted from `pip install .` and the installed package can't
# find it (e.g. inside the Docker image).
[tool.setuptools.package-data]
"src.persistence" = ["*.sql"]

# --- ruff configuration (Step 1.2 expands this) ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "ASYNC",# flake8-async
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]

# --- mypy configuration ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
check_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["ccxt", "ccxt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true

# boto3 / botocore ship no type information that satisfies --strict. The
# rds-data client is wrapped behind the DataApiSignalStore (its surface is a
# single execute_statement call), so we treat the client as Any there rather
# than pulling in the heavy boto3-stubs (which are themselves strict and would
# add more friction than they remove at this scale).
[[tool.mypy.overrides]]
module = ["boto3"]
ignore_missing_imports = true

# langfuse is an optional extra (the `tracing` group) -- not installed in CI or
# the default dev env -- and src/common/tracing.py imports it lazily and
# guarded. Treat it as missing-OK so --strict passes without the extra present.
[[tool.mypy.overrides]]
module = ["langfuse", "langfuse.*"]
ignore_missing_imports = true

# --- pytest configuration ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
# Default run excludes integration tests; opt in with `pytest -m integration`.
addopts = ["-m", "not integration"]
markers = [
    "integration: integration tests that hit real external services (skipped in CI by default)",
]
filterwarnings = [
    "error",
]
